--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.9",
+    "@fortawesome/free-brands-svg-icons": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.6.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "date-fns": "^1.30.1",
+    "jwt-decode": "^2.2.0",
     "now": "^16.6.3",
     "prop-types": "^15.7.2",
     "react": "^16.6.3",
@@ -21,7 +23,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "now --prod ./build"
+    "deploy": "now --prod ./build",
+    "kill": " sudo kill -9 `sudo lsof -t -i:3000`"
   },
   "eslintConfig": {
     "extends": "react-app"
