--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@fortawesome/free-brands-svg-icons": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.6.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "contentful": "^7.14.3",
     "date-fns": "^1.30.1",
+    "dotenv": "^8.2.0",
     "jwt-decode": "^2.2.0",
     "now": "^16.6.3",
+    "path": "^0.12.7",
     "prop-types": "^15.7.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
