--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject",
-    "predeploy": "yarn build",
+    "predeploy": "yarn build:style && yarn build",
     "deploy": "now --name mysterion-app",
     "kill": " sudo kill -9 `sudo lsof -t -i:3000`"
   },
